# hask-replace

./: .gitignore  .travis.yml  Cargo.toml  Justfile  README.md  TODO.md  appveyor.yml
benches/: bench.rs
ci/: before_deploy.ps1  before_deploy.sh  script.sh
data/: .ghc.environment.x86_64-linux-8.2.1  cabal.project
data/alex/: Lexer.x
data/cata/: EmptyMod.hs  Main.hs  Mod.hs  Mod.out  cata.cabal  cata.out  stack.yaml
data/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
data/dist-newstyle/packagedb/ghc-8.2.1/: cata-0.1.0.0-inplace.conf  package.cache  sum-0.1.0.0-inplace.conf
data/sum/: Sig.hsig  sum.cabal
ion/: bench  haskell-src-exts  lens  packages  test  test-dhall
src/: bench.rs  cabal.rs  hask.rs  lib.rs  main.rs  options-en.yml  test.rs  utils.rs
