[package]
authors = ["Vanessa McHale <vanessa.mchale@reconfigure.io>"]
description = "Rename haskell modules at the speed of Rust"
documentation = "https://github.com/vmchale/hask-replace#README"
homepage = "https://github.com/vmchale/hask-replace"
license-file = "LICENSE"
name = "hask-replace"
repository = "https://github.com/vmchale/hask-replace"
version = "0.6.0"

[[bin]]
name = "hr"
path = "src/main.rs"

[dependencies]
colored = "1.5.2"
rayon = "0.8.2"
walkdir = "1.0.7"
nom = { git = "https://github.com/vmchale/nom", features = ["verbose-errors"] } #{ version = "3.2", features = ["verbose-errors"] }

[dependencies.regex]
features = ["simd-accel"]
version = "0.2"

[dependencies.clap]
features = ["yaml"]
version = "2.26.0"

[profile.release]
lto = true
